Fixed bug for modal on mobile device, added display block to modal-form to fix this

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,9 +284,6 @@ hr {
 
 .h-100 {
     height: 100vh!important;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .carousel-bg-color {
@@ -549,6 +546,7 @@ hr {
         width: 100%;
         margin: 2px auto;
         border: 1px solid;
+        display: block;
     }
 
     .modal-footer {
